# Evolutionary-Agent-for-Sii

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
browser-service/: run.sh
browser-service/app/: browser.py  routes.py
configs/: qwen3_5_9b_simplevqa_mm.yaml  qwen3_5_dashscope_simplevqa_mm.yaml  qwen3_8b_simplevqa.yaml
docs/: ARCHITECTURE.md
examples/: run_agent.py  run_mock.py
harness-sii/: README.md  config.py  curator.py  dataset_context.py  dataset_fastpath.py  eval_modes.py  evaluate.py  evaluate_2wiki.py  evaluate_benchmark.py  evaluate_runner.py  evaluator.py  generate_submission.py  memory.py  memory_store.py  metris.py  pipeline.sh  playbook.py  prepare_submission_files.py  reflection.py  requirements.txt  sandbox_client.py  skill_store.py  task_runner.py  test_messages_for_step.py  trajectory.py
harness-sii/2wiki_learned_skills/: SKILL.md
harness-sii/benchmark_learned_skills/: SKILL.md
harness-sii/data_test/: 2wiki.jsonl  SimpleVQA.jsonl
harness-sii/harness-sii/: sandbox_client.py
harness-sii/learned_skills/: SKILL.md  simplevqa_landmark_entity_recognition.md
meta-harness-sii/: README.md  README_search.md  config.py  evaluate.py  evaluate_benchmark.py  evaluate_runner.py  evaluator.py  filesystem.py  memory.py  meta_loop.py  metris.py  preprocessor.py  proposer.py  reflection.py  run_meta_harness.sh  task_runner.py  test_meta_harness.py
my_agent/: __init__.py  config.py
my_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
my_agent/agent/: loop.py  (+1 more)
prompts/: my_agent_system_prompt.md
(+196 files in other folders)
